2008-09-25  Derek R. Price  <derek@ximbiot.com>

	* status.c, update.c: Some cleanup.
	* subr.c (dir_append_dirs): Extend to ignore ./*.  Improve header block
	comment.
	* tag.c: Some cleanup.
	(check_fileproc): Improve error message.
	* sanity.sh (basica-4a): Update to compensate for new error message.

2008-09-22  Derek R. Price  <derek@ximbiot.com>

	* repos.c (Name_Repository): Clean up and simplify.
	* sanity.sh: Update to compensate for changed error messages.

	* log.c, main.c, remove.c: Some cleanup.
	* rcs.c: Likewise.
	(locate_rcs): Export.  Change int arg to bool.
	* rcs.h (locate_rcs): Add prototype.

	* stack.c (unshift_string_array, init_string_list): New utility
	functions.
	* stack.h (unshift_string_array, init_string_list): Prototypes for
	same.

	* edit.c (ncheck_fileproc): Rename to...
	(ncheck_filesdoneproc): ...this and call the new function...
	(send_notifications): ...here for efficiency.  Some cleanup.

	* find_names.c (find_dirs): Export function.
	* find-names.h (find_dirs): Add prototype.

2008-09-19  Derek R. Price  <derek@ximbiot.com>

	* find_names.c (Find_Names, Find_Directories): Assume entries will be
	set by caller.
	* find-names.h (Find_Names): Update prototype.
	* recurse.c (do_recursion): Always open entries when available.
	* sanity.sh (errmsg2-16): Update to compensate.

	* logmsg.c (do_verify): Some cleanup.

	* commit.c (commit): Don't set update_dir for client/server calls to
	do_editor().
	* logmsg.c (do_editor): Some cleanup.
	* sanity.sh (editor): Update to compensate.

	* edit.c (ncheck_fileproc): Some cleanup.

	* checkout.c (checkout_proc): Use empty update dir instead of ".".
	* client.c (call_in_directory): Handle preservation of update_dir from
	server.  Clean up and simplify slightly.
	(is_cvsroot_level): Handle empty update_dir.
	* server.c (output_dir): Preserve update_dir when sending it to
	client.  Clean up.
	* subr.c (dir_append_dirs): Fix TRACE.

	* modules.c (my_module): Repagination.
